# QtVTK

./: CMakeLists.txt  Protocol.h  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  outlineimagethread.cpp  outlineimagethread.h  protocol.cpp  protocol.h  udprecvthread.cpp  udprecvthread.h  util.cpp  util.h
Config/: CMakeLists.txt  ProjectConfig.h.in  SysConfig.cpp  SysConfig.h
CustomizeDialog/: CMakeLists.txt
CustomizeDialog/AboutDialog/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui
CustomizeDialog/CommonDialog/: CMakeLists.txt  commondialog.cpp  commondialog.h  commondialog.ui
CustomizeDialog/SetDialog/: CMakeLists.txt  setdialog.cpp  setdialog.h  setdialog.ui
Resource/Image/: image.qrc
